--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=Backend
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
 
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect 
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.defer-datasource-initialization = true
 
 server.port=8080
