--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=menzg-backend
+# H2 Database configuration
+spring.h2.console.enabled= true
+spring.datasource.url= jdbc:h2:mem:testdb
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
+# Google OAuth2 configuration
+spring.security.oauth2.client.registration.google.client-id=<client-id>
+spring.security.oauth2.client.registration.google.client-secret=<client-secret>
+
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# PostgreSQL configuration (for production, uncomment and update values)
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ime_baze
+#spring.datasource.username=korisnicko_ime
+#spring.datasource.password=lozinka
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
