Promjena konfiguracija aplikacije

--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=menzg-backend
 spring.h2.console.enabled= true
 spring.datasource.url= jdbc:h2:mem:testdb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.username=sa
+spring.datasource.password=password
 
 
 # Google OAuth2 configuration
@@ -11,6 +13,9 @@ spring.security.oauth2.client.registration.google.client-secret=<client-secret>
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
+##za bacanje stare h2 baze
+#spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -19,3 +24,5 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.username=korisnicko_ime
 #spring.datasource.password=lozinka
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.output.ansi.enabled=ALWAYS
