--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=menzg-backend
 # H2 Database configuration
+
 spring.h2.console.enabled= true
 spring.datasource.url= jdbc:h2:mem:testdb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
@@ -26,3 +27,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.output.ansi.enabled=ALWAYS
+
+
+# ovo pokrece data.sql
+spring.jpa.defer-datasource-initialization = true
