--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -31,3 +31,13 @@ spring.output.ansi.enabled=ALWAYS
 
 # ovo pokrece data.sql
 spring.jpa.defer-datasource-initialization = true
+
+
+# Omogu\u0107ite prikaz SQL upita
+spring.jpa.show-sql=true
+
+# Opcionalno, omogu\u0107ite formatiranje SQL upita
+spring.jpa.properties.hibernate.format_sql=true
+
+# Opcionalno, prika\u017Eite parametre upita (korisno za debugiranje)
+spring.jpa.properties.hibernate.use_sql_comments=true
