--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -9,16 +9,16 @@ spring.datasource.username=sa
 
 
 # Google OAuth2 configuration
-spring.security.oauth2.client.registration.google.client-id=<client-id>
-spring.security.oauth2.client.registration.google.client-secret=<client-secret>
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECREt}
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 ##za bacanje stare h2 baze
 #spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # PostgreSQL configuration (for production, uncomment and update values)
 #spring.datasource.url=jdbc:postgresql://localhost:5432/ime_baze
