Implementacija Oauth2 Google - zakomentirano dok se ne rjese rute i veza s bazom

--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.username=sa
 
 
 # Google OAuth2 configuration
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECREt}
+#spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+#spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECREt}
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
