--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -6,7 +6,13 @@ spring.datasource.url= jdbc:h2:mem:testdb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 
+# Port na kojem ce se vrtiti api
+# Obavezno izloziti, ovu varijablu koristi Render
+server.port=${PORT:8080}
 
+# Korijenska putanja ("prefiks") za sve zahtjeve na backend - preporuca se postaviti ovo zbog proxy konfiguracije
+# Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
+server.servlet.context-path=/api
 
 # Google OAuth2 configuration
 #spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
