--- a/.github/workflows/build-and-push-backend.yml
+++ b/.github/workflows/build-and-push-backend.yml
@@ -26,7 +26,7 @@ jobs:
           distribution: 'temurin'
           architecture: x64
           cache: 'maven'
-          cache-dependency-path: 'backend/pom.xml'
+          cache-dependency-path: 'IzvorniKod/backend/pom.xml'
 
       - name: Maven build
         run: mvn clean package
