--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -6,6 +6,20 @@ spring.datasource.url= jdbc:h2:mem:testdb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 
+
+
+spring.security.oauth2.client.registration.google.scope= profile, email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+
+
+spring.security.csrf.enabled=false
+spring.datasource.driver-class-name=org.h2.Driver
+spring.security.headers.frame-options.disable=true
+
+
+
+progi.fronted.url=http://localhost:5173
+
 # Port na kojem ce se vrtiti api
 # Obavezno izloziti, ovu varijablu koristi Render
 server.port=${PORT:8080}
@@ -15,8 +29,8 @@ server.port=${PORT:8080}
 server.servlet.context-path=/api
 
 # Google OAuth2 configuration
-#spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-#spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECREt}
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
