--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/node-geocoder": "^4.2.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
