--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -9,7 +9,12 @@ spring.datasource.username=sa
 
 
 spring.security.oauth2.client.registration.google.scope= profile, email
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+
+# ovo je za lokalni razvoj
+# spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+
+spring.security.oauth2.client.registration.google.redirect-uri=https://backendmain-dyod.onrender.com/login/oauth2/code/google
+
 
 
 spring.security.csrf.enabled=false
@@ -18,7 +23,12 @@ spring.security.headers.frame-options.disable=true
 
 
 
-progi.fronted.url=http://localhost:5173
+   # progi.fronted.url=http://localhost:5173
+   # 
+   
+   progi.frontend.url=https://frontendmain.onrender.com
+   
+   # https://backendmain-dyod.onrender.com
 
 # Port na kojem ce se vrtiti api
 # Obavezno izloziti, ovu varijablu koristi Render
