--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.username=sa
 spring.security.oauth2.client.registration.google.scope= profile, email
 
 # ovo je za lokalni razvoj
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+#spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
-# spring.security.oauth2.client.registration.google.redirect-uri=https://backendmain-i5ve.onrender.com/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://backendmain-i5ve.onrender.com/login/oauth2/code/google
 
 
 
@@ -23,10 +23,10 @@ spring.security.headers.frame-options.disable=true
 
 
 
-progi.fronted.url=http://localhost:5173
+#progi.fronted.url=http://localhost:5173
    # 
    
-# progi.frontend.url=https://frontendmain-2wh3.onrender.com
+progi.frontend.url=https://frontendmain-2wh3.onrender.com
    
    # https://backendmain-dyod.onrender.com
 
