--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.security.oauth2.client.registration.google.scope= profile, email
 # ovo je za lokalni razvoj
 #spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
-spring.security.oauth2.client.registration.google.redirect-uri=https://backendmain-i5ve.onrender.com/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://backendservice-xspx.onrender.com/login/oauth2/code/google
 
 
 
@@ -26,9 +26,9 @@ spring.security.headers.frame-options.disable=true
 #progi.fronted.url=http://localhost:5173
    # 
    
-progi.frontend.url=https://frontendmain-2wh3.onrender.com
+progi.frontend.url=https://frontendservice-l0s1.onrender.com
    
-   # https://backendmain-dyod.onrender.com
+   # https://backendservice-xspx.onrender.com
 
 # Port na kojem ce se vrtiti api
 # Obavezno izloziti, ovu varijablu koristi Render
