--- a/.github/workflows/build-and-push-backend.yml
+++ b/.github/workflows/build-and-push-backend.yml
@@ -3,7 +3,7 @@ name: Build and Push Backend Image
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'IzvorniKod/backend/**'      # Trigger only on changes in the /backend directory
   workflow_dispatch:
