--- a/.github/workflows/build-and-push-frontend.yml
+++ b/.github/workflows/build-and-push-frontend.yml
@@ -3,7 +3,7 @@ name: Build and Push Frontend Image
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'IzvorniKod/frontend/**'      # Trigger only on changes in the /frontend directory
   workflow_dispatch:
