--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.security.oauth2.client.registration.google.scope= profile, email
 # ovo je za lokalni razvoj
 #spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
-// ovo bi trebao biti URI koji Google koristi za preusmjeravanje nakon autentifikacije
+# ovo bi trebao biti URI koji Google koristi za preusmjeravanje nakon autentifikacije
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
 
