--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.security.oauth2.client.registration.google.scope= profile, email
 #spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
 # ovo bi trebao biti URI koji Google koristi za preusmjeravanje nakon autentifikacije
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://backendservice-xspx.onrender.com/login/oauth2/code/google
 
 
 
