--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -22,6 +22,11 @@ spring.security.csrf.enabled=false
 spring.datasource.driver-class-name=org.h2.Driver
 spring.security.headers.frame-options.disable=true
 
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+
+
 
 
 #progi.fronted.url=http://localhost:5173
