--- a/IzvorniKod/frontend/nginx.conf
+++ b/IzvorniKod/frontend/nginx.conf
@@ -5,6 +5,12 @@ server {
         proxy_pass ${BACKEND_URL};
         proxy_ssl_server_name on;
         proxy_read_timeout 2m;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote-addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type";
     }
 
     location / {
