--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -45,9 +45,10 @@ server.servlet.context-path=/api
 
 # Google OAuth2 configuration
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-
+#google.client.id=${GOOGLE_CLIENT_ID}
 
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+#google.client.secret=${GOOGLE_CLIENT_SECRET}
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
