--- a/IzvorniKod/frontend/nginx.conf
+++ b/IzvorniKod/frontend/nginx.conf
@@ -6,7 +6,7 @@ server {
         proxy_ssl_server_name on;
         proxy_read_timeout 2m;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote-addr;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         add_header Access-Control-Allow-Origin * always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
