--- a/IzvorniKod/frontend/.env
+++ b/IzvorniKod/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_BACKEND_URL=https://backendservice-xspx.onrender.com
 BACKEND_URL=https://backendservice-xspx.onrender.com
+VITE_API_URL=https://backendservice-xspx.onrender.com
