--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -37,7 +37,9 @@ progi.frontend.url=https://frontendservice-l0s1.onrender.com
 
 # Port na kojem ce se vrtiti api
 # Obavezno izloziti, ovu varijablu koristi Render
-server.port=${PORT:8080}
+server.address=0.0.0.0
+server.port=8080
+
 
 # Korijenska putanja ("prefiks") za sve zahtjeve na backend - preporuca se postaviti ovo zbog proxy konfiguracije
 # Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
