--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -40,6 +40,9 @@ progi.frontend.url=https://frontendservice-l0s1.onrender.com
 server.address=0.0.0.0
 server.port=8080
 
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
 
 # Korijenska putanja ("prefiks") za sve zahtjeve na backend - preporuca se postaviti ovo zbog proxy konfiguracije
 # Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
