--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -38,7 +38,7 @@ progi.frontend.url=https://frontendservice-l0s1.onrender.com
 # Port na kojem ce se vrtiti api
 # Obavezno izloziti, ovu varijablu koristi Render
 server.address=0.0.0.0
-server.port=8080
+server.port=${PORT:8080}
 
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
