--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.security.oauth2.client.registration.google.scope= profile, email
 #spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
 # ovo bi trebao biti URI koji Google koristi za preusmjeravanje nakon autentifikacije
-spring.security.oauth2.client.registration.google.redirect-uri=https://backendservice-xspx.onrender.com/api/login/oauth2/code/google
+# spring.security.oauth2.client.registration.google.redirect-uri=https://backendservice-xspx.onrender.com/login/oauth2/code/google
 
 
 
@@ -26,14 +26,10 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 
-
-
-
-#progi.fronted.url=http://localhost:5173
-   # 
+progi.frontend.url=http://localhost:5173
    
-progi.frontend.url=https://frontendservice-l0s1.onrender.com
-# https://backendservice-xspx.onrender.com
+#progi.frontend.url=https://frontendservice-l0s1.onrender.com
+#https://backendservice-xspx.onrender.com
 
 # Port na kojem ce se vrtiti api
 # Obavezno izloziti, ovu varijablu koristi Render
@@ -47,14 +43,12 @@ management.endpoint.health.show-details=always
 
 # Korijenska putanja ("prefiks") za sve zahtjeve na backend - preporuca se postaviti ovo zbog proxy konfiguracije
 # Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
-server.servlet.context-path=/api
 
-# Google OAuth2 configuration
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-#google.client.id=${GOOGLE_CLIENT_ID}
-
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
-#google.client.secret=${GOOGLE_CLIENT_SECRET}
+
+
+
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
