--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -64,6 +64,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.password=lozinka
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+
 spring.output.ansi.enabled=ALWAYS
 
 
@@ -71,8 +72,8 @@ spring.output.ansi.enabled=ALWAYS
 spring.jpa.defer-datasource-initialization = true
 
 
-# Omogu\u0107ite prikaz SQL upita
-spring.jpa.show-sql=true
+# Omogu\u0107ite prikaz SQL upita - ONEMOGUCENO SAMO SMETA !!!
+spring.jpa.show-sql=false
 
 # Opcionalno, omogu\u0107ite formatiranje SQL upita
 spring.jpa.properties.hibernate.format_sql=true
