--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -18,13 +18,17 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-snowfall": "^2.1.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "video.js": "^8.21.0",
+    "videojs-contrib-hls": "^5.15.0",
+    "videojs-youtube": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/node-geocoder": "^4.2.6",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.1",
+    "@types/video.js": "^7.3.58",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
