--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -20,7 +23,7 @@
     "react-snowfall": "^2.1.1",
     "uuid": "^11.0.3",
     "video.js": "^8.21.0",
-    "videojs-contrib-hls": "^5.15.0",
+    "videojs-contrib-hls": "^1.3.12",
     "videojs-youtube": "^3.0.1"
   },
   "devDependencies": {
