--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-snowfall": "^2.1.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.0.3",
     "video.js": "^8.21.0",
     "videojs-contrib-hls": "^1.3.12",
