--- a/IzvorniKod/backend/pom.xml
+++ b/IzvorniKod/backend/pom.xml
@@ -52,6 +52,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+	
+			
+			<dependency>
+   	 <groupId>org.springframework</groupId>
+    <artifactId>spring-websocket</artifactId>
+	</dependency>
+	
+	<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-websocket</artifactId>
+	</dependency>
+	
+	<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-messaging</artifactId>
+    <version>5.3.26</version>
+	</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -93,11 +111,16 @@
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 		<dependency>
+		
+
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
   
     <scope>provided</scope>
 	</dependency>
+	
+	
+	
 
 	</dependencies>
 
