--- a/IzvorniKod/backend/pom.xml
+++ b/IzvorniKod/backend/pom.xml
@@ -36,7 +36,7 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
-		
+
 		 <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-oauth2-client</artifactId>
@@ -118,9 +118,14 @@
   
     <scope>provided</scope>
 	</dependency>
-	
-	
-	
+
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.1.1</version> <!-- ili najnoviju verziju -->
+		</dependency>
+
+
 
 	</dependencies>
 
