--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mux/mux-player-react": "^3.2.4",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -23,6 +24,8 @@
     "react-router-dom": "^6.27.0",
     "react-snowfall": "^2.1.1",
     "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "uuid": "^11.0.3",
     "video.js": "^8.21.0",
     "videojs-contrib-hls": "^1.3.12",
@@ -33,6 +36,8 @@
     "@types/node-geocoder": "^4.2.6",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.1",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "@types/video.js": "^7.3.58",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
