--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -80,3 +80,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Opcionalno, prika\u017Eite parametre upita (korisno za debugiranje)
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+
+
+spring.websockets.timeouts.disconnect=60s
