frontend url promijenjen za deploy

--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -26,9 +26,11 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 
-progi.frontend.url=http://localhost:5173
+#progi.frontend.url=http://localhost:5173
    
-#progi.frontend.url=https://frontendservice-l0s1.onrender.com
+   
+   # zamijeni san na main grani na pravi link!! -nikola
+progi.frontend.url=https://frontendservice-l0s1.onrender.com
 #https://backendservice-xspx.onrender.com
 
 # Port na kojem ce se vrtiti api
