--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -55,7 +55,7 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 ##za bacanje stare h2 baze
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=none
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
