--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -53,7 +53,7 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 
 
 # JPA configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 ##za bacanje stare h2 baze
 #spring.jpa.hibernate.ddl-auto=none
 
