--- a/.github/workflows/build-and-push-backend.yml
+++ b/.github/workflows/build-and-push-backend.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'IzvorniKod/backend/**'      # Trigger only on changes in the /backend directory
+      - 'IzvorniKod/backend/**'
   workflow_dispatch:
 
 
