--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -53,9 +53,9 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 
 
 # JPA configuration
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=auto
 ##za bacanje stare h2 baze
-#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=auto
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
