--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -1,88 +1,60 @@
 spring.application.name=menzg-backend
 # H2 Database configuration
 
-spring.h2.console.enabled= true
-spring.datasource.url= jdbc:h2:mem:testdb
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.datasource.username=sa
+# PostgreSQL konfiguracija
+
+spring.datasource.password=${DB_PASS:password}
+spring.datasource.username=${DB_USERNAME:username}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/db}
+spring.datasource.driverClassName=${DB_DRIVER:org.postgresql.Driver}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
+# JPA konfiguracija
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
 
-spring.security.oauth2.client.registration.google.scope= profile, email
-
-# ovo je za lokalni razvoj
-#spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
-
-# ovo bi trebao biti URI koji Google koristi za preusmjeravanje nakon autentifikacije
-# spring.security.oauth2.client.registration.google.redirect-uri=https://backendservice-xspx.onrender.com/login/oauth2/code/google
-
-
-
-spring.security.csrf.enabled=false
-spring.datasource.driver-class-name=org.h2.Driver
-spring.security.headers.frame-options.disable=true
-
+# Google OAuth2 postavke
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.redirect-uri=https://backendservice-xspx.onrender.com/login/oauth2/code/google
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 
-#progi.frontend.url=http://localhost:5173
-   
-   
-   # zamijeni san na main grani na pravi link!! -nikola
-progi.frontend.url=https://frontendservice-l0s1.onrender.com
-#https://backendservice-xspx.onrender.com
+# CORS i sigurnosne postavke
+spring.security.csrf.enabled=false
+spring.security.headers.frame-options.disable=true
 
-# Port na kojem ce se vrtiti api
-# Obavezno izloziti, ovu varijablu koristi Render
+# Port na kojem \u0107e API raditi (Render specifi\u010Dno)
 server.address=0.0.0.0
 server.port=${PORT:8080}
 
 
+server.servlet.session.cookie.same-site=None
+
+
+# Health endpoint
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
 
+# Frontend URL (update za produkciju)
+progi.frontend.url=https://frontendservice-l0s1.onrender.com
 
-# Korijenska putanja ("prefiks") za sve zahtjeve na backend - preporuca se postaviti ovo zbog proxy konfiguracije
-# Ako je npr. u controlleru navedena putanja /test, moci ce joj se pristupiti pomocu putanje /api/test
-
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
-
-
-
-
-# JPA configuration
-spring.jpa.hibernate.ddl-auto=none
-##za bacanje stare h2 baze
-#spring.jpa.hibernate.ddl-auto=auto
-
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-
-# PostgreSQL configuration (for production, uncomment and update values)
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ime_baze
-#spring.datasource.username=korisnicko_ime
-#spring.datasource.password=lozinka
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
+# Debug i SQL prikaz
 spring.output.ansi.enabled=ALWAYS
+spring.jpa.show-sql=false  
+
+ 
 
 
-# ovo pokrece data.sql
-spring.jpa.defer-datasource-initialization = true
+spring.jpa.defer-datasource-initialization=true
 
-
-# Omogu\u0107ite prikaz SQL upita - ONEMOGUCENO SAMO SMETA !!!
-spring.jpa.show-sql=false
-
-# Opcionalno, omogu\u0107ite formatiranje SQL upita
-spring.jpa.properties.hibernate.format_sql=true
-
-# Opcionalno, prika\u017Eite parametre upita (korisno za debugiranje)
-spring.jpa.properties.hibernate.use_sql_comments=true
+spring.sql.init.mode=never 
 
 
 
-spring.websockets.timeouts.disconnect=60s
+
